# mpcc_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: mpcc_test.rviz
launch/: mpcc.launch  mpcc_sim.launch
src/: CMakeLists.txt  mpcc_controller_node.cpp
src/mpcc/: CMakeLists.txt  MPCC  main copy 2.cpp  main copy.cpp  main.cpp  main_working.cpp  mpcc_ros.h  types.h
src/mpcc/Constraints/: constraints.cpp
src/mpcc/MPC/: mpc.cpp  mpc.h
src/mpcc/Model/: model.cpp
src/mpcc/Params/: bounds_1_scale.json  bounds_fullscale.json  bounds_iac.json  config.json  cost_iac.json  cost_iac_03_dDelta.json  model_1_scale.json  model_43_scale.json  model_iac_00_measured.json  track.json
src/mpcc/Spline/: arc_length_spline.cpp  arc_length_spline.h
src/mpcc_controller/: CMakeLists.txt  CMakeLists_c.txt  README.md  config.h  mpcc_controller_node.cpp  mpcc_ros.h
src/mpcc_controller/Constraints/: constraints.cpp  constraints.h
src/mpcc_controller/MPC/: mpc.cpp
src/mpcc_controller/Params/: config.json  cost_iac.json  cost_iac_02.json  cost_iac_05_dDelta_dD_horizon_60_fast_unstable.json  params.h  track_iac_00_traj_race.json
src/mpcc_controller/Spline/: arc_length_spline.h
src/mpcc_controller/mpcc_controller/: README.md  config.h  mpcc_controller_node.h
src/mpcc_controller/mpcc_controller/Constraints/: constraints.cpp  constraints.h
src/mpcc_controller/mpcc_controller/Interfaces/: hpipm_interface.cpp
src/mpcc_controller/mpcc_controller/MPC/: mpc.cpp  mpc.h
src/mpcc_controller/mpcc_controller/Model/: model.cpp  model.h
src/mpcc_controller/mpcc_controller/Params/: bounds.json  config.json  cost_iac_01.json  cost_iac_04_dDelta_dD.json  cost_iac_by_spec.json  model_1_scale.json  model_fullscale.json  model_iac_00_by_spec.json  model_iac_01.json  model_iac_02_260kph.json  params.cpp  track.h  track_iac_01_raceline_in_cen.json
src/mpcc_controller/mpcc_controller/Spline/: arc_length_spline.cpp  cubic_spline.h
src/tf_publisher/: CMakeLists.txt  tf_publisher.cpp  tf_publisher.h
